Finish core logic
